[To rel/0.13] Validation and Rewrite file tool (#6119)